Commit on Dec 2nd

--- a/public/css/admin-css/maincss.css
+++ b/public/css/admin-css/maincss.css
@@ -71,6 +71,12 @@ body {
     background-color: #263238;
     color: #fff;
 }
+
+.card-header {
+    background: #000 !important;
+    color: #fff;
+    font-size: 18px;
+}
 /* offline-doc */
 
 .offline-doc .navbar.navbar-transparent {
